--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Home Page</h1>
     <button onclick="location.href='page1.html'">Page Evandro</button>
-
-</body>
-
+    <button onclick="location.href='bryony.html'">Page Evandro</button>
+  </body>
 </html>
