--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Home Page</h1>
-    <button onclick="location.href='page1.html'">Page Evandro</button>
+    <button onclick="location.href='evandro_lugli.html'">Page Evandro</button>
 
 </body>
 
