--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Home Page</h1>
     <button onclick="location.href='page1.html'">Page Evandro</button>
-
+    <button onclick="location.href='bruno.html'">Page Bruno</button>
 </body>
 
 </html>
